Added endpoints for service statistics summary
